test/files/neg/t6264.scala
class Foo {
  def foo(x: AnyRef): Unit = {
    x.isInstanceOf[Tuple2[_, Tuple1[_]]]
    ()
  }
}
